<resources>
    <string name="app_title">La Gema de Marvel</string>
    <string name="title_activity_navegation_panel">NavegationPanel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">La Gema de Marvel</string>
    <string name="nav_header_subtitle">lagemademarvel@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register_panel">Registrate</string>

    <string name="login_panel">Logeate</string>
    <string name="login">Inicia sesion</string>
    <string name="name">Nickname</string>
    <string name="email">Ejemplo@email.com</string>
    <string name="password">Contraseña</string>
    <string name="username">username</string>
    <string name="password_comp">Comprobar contraseña</string>
    <string name="registrate">Registrate</string>


    <string name="title_activity_register">Registrate</string>
    <string name="password_inc">Las contraseñas no son iguales</string>
    <string name="empty_login_field">Campo vacio, por favor, rellena todos los campos para ingresar</string>
    <string name="login_failed_message">Log in fallados &#8230;, espera unos minutos.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_promocionate">Promocionate</string>
    <string name="label_perfil">Perfil</string>
    <string name="label_menu">Menu</string>
    <string name="label_news">News</string>
</resources>
