<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPanel">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/i_want_you"
        android:backgroundTint="@color/BlancoRoto"
        android:backgroundTintMode="multiply"
        tools:context=".RegisterScreen"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="16dp">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="288dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/name"
            android:textColorHint="@color/White"
            android:inputType="textPersonName|textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/user_username"
            android:layout_width="288dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName|textCapSentences"
            android:textColorHint="@color/White"
            app:layout_constraintEnd_toEndOf="@+id/user_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_name"
            app:layout_constraintTop_toBottomOf="@+id/user_name" />

        <EditText
            android:id="@+id/user_password"
            android:layout_width="288dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/White"
            app:layout_constraintEnd_toEndOf="@+id/user_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_email"
            app:layout_constraintTop_toBottomOf="@+id/user_email" />

        <EditText
            android:id="@+id/user_password_comp"
            android:layout_width="288dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password_comp"
            android:inputType="textPassword"
            android:textColorHint="@color/White"
            app:layout_constraintEnd_toEndOf="@+id/user_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_password"
            app:layout_constraintTop_toBottomOf="@+id/user_password" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="288dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/White"
            app:layout_constraintEnd_toEndOf="@+id/user_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_username"
            app:layout_constraintTop_toBottomOf="@+id/user_username" />

        <Button
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:background="@color/White"
            android:onClick="Register_User"
            android:text="@string/registrate"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/user_password_comp"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="@+id/user_password_comp"
            app:layout_constraintTop_toBottomOf="@+id/user_password_comp" />

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:background="@color/White"
            android:onClick="Login_User"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/Register"
            app:layout_constraintHorizontal_bias="0.433"
            app:layout_constraintStart_toStartOf="@+id/Register"
            app:layout_constraintTop_toBottomOf="@+id/Register" />
    </android.support.constraint.ConstraintLayout>
    <RelativeLayout
        android:id="@+id/main_layoutPageLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DD111111"
        android:gravity="center"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:text="Registering..."
            android:layout_marginTop="14dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/progressbar"
            android:layout_toRightOf="@id/progressbar" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>